:last-update-label!:

= History

== 10.0.1 (undetermined)
* Refined CI. #401
* Refined log level. #399
* Refined documentr. Added coding rule to navigation bar.  #396
* Refined broker. #395, #398
* Changed the broker auth JSON file comment syntax. #394
** Now supports C/C++-style line and block comments.
** The `#` line comment syntax is no longer supported.
** For migrating, simply replace `#` with `//`.
** *This is a breaking change for the tool (not the library), so the major version remains unchanged.*
* Fixed broker websocket connection. #393, #397
** It doesn't affect the library part.
* Refined documents. #389, #390

== 10.0.0
=== breaking changes #388
* Re-organized include files.
** See https://redboltz.github.io/async_mqtt/doc/10.0.0/async_mqtt/header.html
* Removed non bulk read to meet Sans-I/O interface.
* Supported I/O independent (aka Sans-I/O) library.
* underlying_handshake functionality is updated from free function to member function.
** Simply replace `async_underlying_handshake(your_ep.next_layer(), ...)` with `your_ep.async_underlying_handshake(...)`.

=== other updates
* Added invalid combination checking of sharename and nl(no local). #372
* Fixed receive maximum processing. #371
* Fixed invalid Message Expiry Interval applying. #369
* Fixed invalid template parameter comparison. #368
* Added custom logger example. #367
* Refined documents. #364, #365
* Made colored log selectable (by default true(colored)). #363
* Fixed misuse of bound allocator. #362
* Fixed TLS example. #361

== 9.0.2
* Added ASYNC_MQTT_BUILD_EXAMPLES_SEPARATE option to enable library separate build example. #359
* Fixed TLS timeout logic. #357
* Fixed broker auth file for docker. #356

== 9.0.1
* Fixed TLS plug out timeout logic. #355
* Refined client_cli tool. #354
* Refined bench tool. #352
* Refined docker container. #350
* Moved setup_log.hpp to `util/` (appropriate location). #349
* Refined documents. #348, #349, #351

== 9.0.0
=== breaking changes